重构前端页面设计：新增：背景、Logo、默认封面页；重构登录、注册、找回三大页面逻辑，增加了封面页到登录页的跳转动画，增加了登录内部三页面的跳转动画，增加了登陆成功的跳转动画

--- a/frontend/suyuan-frontend/package.json
+++ b/frontend/suyuan-frontend/package.json
@@ -14,11 +14,14 @@
     "antd": "^5.27.4",
     "framer-motion": "^12.23.24",
     "next": "14.2.33",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-redux": "^9.2.0",
-    "redux-toolkit": "^1.1.2"
+    "redux-toolkit": "^1.1.2",
+    "styled-components": "^6.1.19",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@types/json5": "^0.0.30",
